menu gap fixed and smooth-scrolling added

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
+  scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
   position: relative;
 }
@@ -146,7 +147,8 @@ body {
   right: -1.5rem;
   z-index: 9999;
   background-color: var(--white-color);
-  height: 100vh;
+  height: 108vh;
+  padding-bottom: 5rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 8px 16px 0px;
   overflow-y: scroll;
   transition: all 0.4s ease-in;
